[gd_scene load_steps=4 format=3 uid="uid://da5iwm83ct7m5"]

[ext_resource type="Script" path="res://scenes/ui/options.gd" id="1_vigrd"]
[ext_resource type="PackedScene" uid="uid://cwmt88khbkvfv" path="res://scenes/camera.tscn" id="2_aijip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n455q"]
bg_color = Color(0.0470588, 0.00392157, 0.0901961, 1)

[node name="options" type="Node2D"]
script = ExtResource("1_vigrd")

[node name="Panel" type="Panel" parent="."]
offset_left = -277.0
offset_top = -251.0
offset_right = 293.0
offset_bottom = 235.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n455q")

[node name="camera" parent="." instance=ExtResource("2_aijip")]

[node name="CheckButtonScreenshake" type="CheckButton" parent="."]
offset_left = -112.0
offset_top = -109.0
offset_right = 38.0
offset_bottom = -78.0
button_pressed = true
text = "Screen shake"

[node name="SoundSlider" type="HSlider" parent="."]
offset_top = -135.0
offset_right = 211.0
offset_bottom = -119.0
min_value = -40.0
max_value = 24.0

[node name="Label" type="Label" parent="SoundSlider"]
layout_mode = 0
offset_left = -69.0
offset_top = -4.0
offset_right = -10.0
offset_bottom = 22.0
text = "Volume"

[node name="SaveButton" type="Button" parent="."]
offset_left = -52.0
offset_top = 81.0
offset_right = -8.0
offset_bottom = 112.0
text = "Save"

[node name="CloseButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 81.0
offset_right = 58.0
offset_bottom = 112.0
text = "Close"

[connection signal="button_up" from="SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="button_up" from="CloseButton" to="." method="_on_close_button_button_up"]
